DOC-2093: 6.6-release-notes.adoc
Copy edit.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -209,7 +209,7 @@ With this update, this has been changed.
 
 The icon in an `alertbanner` dialog remains visible, but it is no longer clickable if the `url` argument is not specified.
 
-For more information on `alertbanner` dialog components, see xref:dialog-components.adoc#alertbanner[Alert banner section] of the Dialog components documentation.
+For more information on `alertbanner` dialog components, see the xref:dialog-components.adoc#alertbanner[Alert banner section] of the Dialog components documentation.
 
 
 [[bug-fixes]]
