DOC-2093: 6.6-release-notes.adoc
Edits to write-up of TINY-10015, Fixed an issue that caused the inline dialog `size` setting to have no effect.

1. Removed the `size: ‘large’,` option from the example.
2. Added note to the effect `size: ‘large’,` is not supported in inline dialogs.
3. Added xref linking out to Dialog configuration options table.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -230,10 +230,13 @@ Setting an inline dialog to any of the supported sizes —
 ----
 size: 'normal', // or
 size: 'medium', // or
-size: 'large',
 ----
 
 — now changes the dialog’s width, as expected.
+
+For more information see the xref:dialog-configuration.adoc#options[Options] table in the xref:dialog-configuration.adoc[Dialog configuration documentation].
+
+NOTE: `inline` dialogs do not support `size: 'large'`.
 
 === Fixed an issue that prevented the close button from being clicked when the dialog was blocked
 //#TINY-10056
