DOC-2026: ai.adoc
Typo correction.

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -44,7 +44,7 @@ tinymce.init({
 ----
 
 [NOTE]
-.The `ai_shortucts_ option
+.The `ai_shortucts` option
 ====
 The above example includes both AI Assistant toolbar items and an explicitly configured xref:#aishortcuts[`ai_shortcuts`] option.
 
