DOC-2026: ai-toolbar-buttons.adoc
Descriptions added for both toolbar items.

--- a/modules/ROOT/partials/toolbar-button-ids/ai-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/ai-toolbar-buttons.adoc
@@ -1,6 +1,6 @@
 [cols="1,3",options="header"]
 |===
 |Toolbar button identifier |Description
-|`+aidialog+`    |Description one.
-|`+aishortcuts+` |Description two.
+|`+aidialog+`    |Open the AI Assistant dialog.
+|`+aishortcuts+` |Opens the AI Shortcuts menu, displaying the available shortcut prompts for querying the AI API.
 |===
