--- a/modules/ROOT/partials/menu-item-ids/ai-menu-items.adoc
+++ b/modules/ROOT/partials/menu-item-ids/ai-menu-items.adoc
@@ -1,6 +1,6 @@
 [cols="1,1,2",options="header"]
 |===
 |Menu item identifier |xref:menus-configuration-options.adoc#example-the-tinymce-default-menu-items[Default Menu Location] |Description
-|`+aidialog+`         |Tools |Description one.
-|`+aishortcuts+`      |Tools |Description two.
+|`+aidialog+`         |Tools |Open the AI Assistant dialog.
+|`+aishortcuts+`      |Tools |Opens the AI Shortcuts sub-menu, displaying the available shortcut prompts for querying the AI API.
 |===
