DOC-2026: ai-apis.adoc
Replaced boilerplate description with actual description.

--- a/modules/ROOT/partials/plugin-apis/ai-apis.adoc
+++ b/modules/ROOT/partials/plugin-apis/ai-apis.adoc
@@ -1,7 +1,7 @@
 [cols="1,1,4",options="header"]
 |===
 |Name   |Arguments    |Description
-|getThreadLog |N/A |<What api1 does>
+|getThreadLog |N/A |Retrieves the history of each thread generated while using the plugin.
 |===
 
 .Examples
