--- a/modules/ROOT/pages/ai-proxy.adoc
+++ b/modules/ROOT/pages/ai-proxy.adoc
@@ -7,7 +7,7 @@
 :plugincode: ai
 :plugincategory: premium
 
-include::partial$misc/admon-premium-plugin.adoc[]
+include::partial$misc/admon-ai-pricing.adoc[]
 
 
 == What is an Ai proxy server?
