TCLOUD-4122: ai-proxy.adoc
Edited sub-head to replace placeholder text with AsciiDoc variable.

--- a/modules/ROOT/pages/ai-proxy.adoc
+++ b/modules/ROOT/pages/ai-proxy.adoc
@@ -23,7 +23,7 @@ A proxy is a server that sits between the browser containing the {productname} e
 
 
 == What do I need to setup a proxy service with TinyMCE?
-.Sign up for the TinyMCE <Plugin Name>
+.Sign up for the TinyMCE {pluginname}
 [%collapsible]
 ====
 The TinyMCE <Plugin Name> provides the end user Ui interaction components and workflows. This enables end users to make Ai requests, modify, fine tune results and insert enhanced content back into the editor.  The plugin also provides the server request component that sends user requests to the Ai LLM service.
