TCLOUD-4122: nav.adoc
Edited nav.adoc entry as per comment in DOC-2026.

This edit is planned to integrate with the change made to nav.adoc in the /feature/6.6/DOC-2026 branch (ie the change made for th AI Assistant documentation).

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -283,7 +283,7 @@
 *** xref:advtable.adoc[Advanced Tables]
 *** xref:advanced-templates.adoc[Advanced Templates]
 *** xref:advanced-typography.adoc[Advanced Typography]
-*** xref:ai.adoc[AI]
+**** xref:ai-proxy.adoc[AI proxy server reference guide]
 *** xref:casechange.adoc[Case Change]
 *** xref:checklist.adoc[Checklist]
 *** Comments
