DOC-2026: full-featured-premium-demo.adoc
Added entry for AI Assistant to Excluded plugins table.

Took opportunity to sort the four excluded plugins into alphabetical order by plugin name.

--- a/modules/ROOT/pages/full-featured-premium-demo.adoc
+++ b/modules/ROOT/pages/full-featured-premium-demo.adoc
@@ -17,11 +17,15 @@ The following plugins are excluded from this example:
 |===
 |Excluded plugins |Notes
 
-|xref:moxiemanager.adoc[MoxieManager (Premium Plugin)]
-|xref:tinydrive-introduction.adoc[*{cloudfilemanager}*] included instead.
+
+|xref:ai.adoc[AI Assistant]
+|Logistical concerns regarding exposing API keys preclude adding this.
 
 |xref:autoresize.adoc[Autoresize]
 |Resizes the editor to fit the content.
 
 |xref:code.adoc[Code]
 |xref:advcode.adoc[*Advanced Code Editor*] included instead.
+
+|xref:moxiemanager.adoc[MoxieManager]
+|xref:tinydrive-introduction.adoc[*{cloudfilemanager}*] included instead.
